syntax = "proto3";

package update_user;

option go_package="./protoc";

message UpdateUserInfoRequest{
  int64 id = 1;
  string nickname = 2;
  int64 sex = 3;
  string birthday = 4;
}

message UpdateUserInfoResponse {
  int64 states = 1;
  int64 id = 2;
}

message UpdateUserMemberRequest{
  int64 id = 1;
  int64 is_member = 2;
}

message UpdateUserMemberResponse{
  int64 states = 1;
  int64 id = 2;
}

message UpdateUserPassWordRequest{
  int64 id = 1;
  string password = 2;
}

message UpdateUserPassWordResponse{
  int64 states = 1;
  int64 id = 2;
}


service UpdateUser {
  rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoResponse);
  rpc UpdateUserMember(UpdateUserMemberRequest) returns (UpdateUserMemberResponse);
  rpc UpdateUserPassWord(UpdateUserPassWordRequest) returns (UpdateUserPassWordResponse);
}

